--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="script-example">
             <img src="files/images/demo-script.png">
             <p style="margin: 20px;">turns into...</p>
-            <img src="files/images/demo-output.png">
+            <img src="files/images/demo-output.svg">
         </div>
         <div id="try-container">
             <a href="editor.html">
