--- a/editor.html
+++ b/editor.html
@@ -21,8 +21,8 @@
         <div id="buttons">
             <img src="files/images/run.svg" class="btn" onclick="run()" title="Compile and run">
             <img src="files/images/download.svg" class="btn" onclick="download()" title="Compile and download project as .sb3">
-            <img src="files/images/save script.png" height="40px" class="btn" onclick="saveCode()" title="Save code in editor as .ScratchScript file">
-            <img src="files/images/load icon.png" height="40px" class="btn" onclick="document.querySelector('#loadcodeinput').click()" title="Load a .ScratchScript file into editor">
+            <img src="files/images/save.svg" height="40px" class="btn" onclick="saveCode()" title="Save code in editor as .ScratchScript file">
+            <img src="files/images/load.svg" height="40px" class="btn" onclick="document.querySelector('#loadcodeinput').click()" title="Load a .ScratchScript file into editor">
             <input id="loadcodeinput" type="file" accept=".ScratchScript" hidden onchange="loadCode()"/>
             <!-- <button onclick="run()" class="btn" disabled>Compile and Run</button><br> -->
             <!-- <button onclick="download()" class="btn" disabled style="margin-top: 5px;">Compile and Download</button> -->
