--- a/editor.html
+++ b/editor.html
@@ -27,7 +27,8 @@
             <!-- <button onclick="run()" class="btn" disabled>Compile and Run</button><br> -->
             <!-- <button onclick="download()" class="btn" disabled style="margin-top: 5px;">Compile and Download</button> -->
         </div>
-        <a href="https://github.com/redspacecat/ScratchScript" target="_blank"><button class="header-btn left">GitHub</button></a>
+        <a href="/editor.html"><button class="header-btn left">New Project</button></a>
+        <a href="https://github.com/redspacecat/ScratchScript" target="_blank"><button class="header-btn">GitHub</button></a>
         <a href="https://scratch.mit.edu/discuss/topic/822607" target="_blank"><button class="header-btn">Forum Topic</button></a>
         <a href="docs" target="_blank"><button class="header-btn">Documention</button></a>
     </div>
