--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ScratchScript — Text Based Scratch</title>
-    <link rel="stylesheet" href="files/css/homepage.css">
+    <link rel="stylesheet" href="files/css/homepage.css"/>
 </head>
 <body>
+    <div id="title">
+        <a href="/"><img src="files/images/logo.png"></a>
+        <a href="/editor.html"><button class="header-btn left">New Project</button></a>
+        <a href="https://github.com/redspacecat/ScratchScript"><button class="header-btn">GitHub</button></a>
+        <a href="https://scratch.mit.edu/discuss/topic/822607"><button class="header-btn">Forum Topic</button></a>
+        <a href="docs"><button class="header-btn">Documention</button></a>
+    </div>
     <div id="container">
-        <h1 id="title">Welcome to ScratchScript</h1>
         <p>ScratchScript is a text based language that compiles to Scratch 3.0 (.sb3) files.</p>
         <p>For example:</p>
         <div id="script-example">
