--- a/editor.html
+++ b/editor.html
@@ -36,9 +36,9 @@
         <div class="loading-spinner" id="editor-loading-spinner" style="display: none;"></div>
         <div id="editor-container">
             <div id="editor-tabs">
-                <button id="editor-code-button" onclick="switchToCode()">Code</button>
-                <button id="editor-costumes-button" onclick="switchToCostumes()">Costumes</button>
-                <button id="editor-sounds-button" onclick="switchToSounds()">Sounds</button>
+                <button id="editor-code-button" class="tab selected" onclick="switchToCode()">Code</button>
+                <button id="editor-costumes-button" class="tab" onclick="switchToCostumes()">Costumes</button>
+                <button id="editor-sounds-button" class="tab" onclick="switchToSounds()">Sounds</button>
                 <span style="margin-left: 5px;" id="selected-sprite" hidden>Sprite: </span>
             </div>
             <hr>
